--- a/css/styleproduto.css
+++ b/css/styleproduto.css
@@ -8,7 +8,6 @@
     font-family:sans-serif;
     font-size: 2em;
     color: white;
-
 }
 
 .titulo{
@@ -39,6 +38,14 @@ section{
     height: 700px;
     display: flex;
     margin-top: 20px;
+}
+
+.fotovinho{
+    width: 40%;
+}
+
+.fotovinhoLuizArgenta{
+    width: 60%;
 }
 
 .item {
